--- a/src/frontend/src/assets/css/_global.scss
+++ b/src/frontend/src/assets/css/_global.scss
@@ -34,3 +34,10 @@ body {
 .fixed-column-size-table table {
   table-layout: fixed;
 }
+
+.square-button {
+  width: 40px;
+  height: 40px;
+  border-radius: 10%;
+  margin: 5px;
+}
